tests/fail-func.err
Fatal error: exception Match_failure("semant.ml", 19, 29)
